Closed
Bug 225984
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for beos files
Categories
(Core Graveyard :: GFX: BeOS, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
6.42 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/gfx/src/beos/nsFontMetricsBeOS.cpp&rev=1.33&mark=142#137
Deref-error: "mFont"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/gfx/src/beos/nsRenderingContextBeOS.cpp&rev=1.40&mark=268#263
Deref-error: "mTranMatrix"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/gfx/src/beos/nsRenderingContextBeOS.cpp&rev=1.40&mark=434#429
Deref-error: "mTranMatrix"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/gfx/src/beos/nsRenderingContextBeOS.cpp&rev=1.40&mark=440#435
Deref-error: "mTranMatrix"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/widget/src/beos/nsAppShell.cpp&rev=1.23&mark=435#430
Deref-error: "newitem"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/widget/src/beos/nsAppShell.cpp&rev=1.23&mark=436#431
Deref-error: "newitem"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/widget/src/beos/nsWindow.cpp&rev=1.66&mark=1254#1249
Deref-error: "mFont"
Not a bug:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/widget/src/beos/nsWindow.cpp&rev=1.66&mark=2679#2674 Deref-error: "resizeRunner"
Attachment #135727 -
Flags: superreview?(roc)
Attachment #135727 -
Flags: review?(roc)
Comment on attachment 135727 [details] [diff] [review]
handle allocation failures [-uwp4]
looks good
Attachment #135727 -
Flags: superreview?(roc)
Attachment #135727 -
Flags: superreview+
Attachment #135727 -
Flags: review?(roc)
Attachment #135727 -
Flags: review+
checked in (a bit bumpy, sorry)
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•