Bug 225984 DRefTool analysis for beos files r=roc sr=roc